--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,7 @@ logger = "0.4"
 iron-json-response = "*"
 serde_json = "1"
 dotenv = "0.13"
+jsonwebtoken = "5"
+serde_derive = "1"
+r2d2_redis = "0.8.0"
+rand = "0.6.4"
