--- a/example.env
+++ b/example.env
@@ -1,2 +1,3 @@
 POSTGRES_CONNECTION_STRING=postgres://user:pass@localhost:5432/dbbname
 LISTEN=0.0.0.0:4000
+REDIS_CONNECTION_STRING=redis://0.0.0.0:6378
